--- a/src/app/src/_modules/admin/admin-user/admin-user.component.html
+++ b/src/app/src/_modules/admin/admin-user/admin-user.component.html
@@ -19,7 +19,7 @@
           <h4>Ngày Sinh</h4>
         </label>
         <input type="date" class="form-control" name="NgaySinh" #NgaySinh='ngModel' ngModel required
-          title="Nhập Ngày Sinh" id="dateB">
+          title="Nhập Ngày Sinh" value='{{birth}}' id="dateB">
       </div>
     </div>
     <div class="form-group">
