--- a/src/app/src/_modules/home/course-view/course-view.component.html
+++ b/src/app/src/_modules/home/course-view/course-view.component.html
@@ -123,7 +123,7 @@
 
                     <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                     </p>
-                    <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}' class="text-center"
+                    <a routerLink='/chitietkhoahoc/{{khoahoc.id}}/{{khoahoc.MangKH_id}}' class="text-center"
                       class="btn btn-info">Xem Chi Tiết</a>
                   </div>
                 </div>
