--- a/src/app/src/_modules/home/course-watch/course-watch.component.css
+++ b/src/app/src/_modules/home/course-watch/course-watch.component.css
@@ -20,13 +20,14 @@
     /* color: #818181; */
     display: block;
     transition: 0.3s;
+    color:black
   }
   .sidenav .card-header{
     background: #ffffff;
   }
   /* When you mouse over the navigation links, change their color */
   .sidenav a:hover {
-    color: #f1f1f1;
+    color: #69BE69;
   }
   
   /* Position and style the close button (top right corner) */
