--- a/src/app/src/_modules/home/footer/footer.component.html
+++ b/src/app/src/_modules/home/footer/footer.component.html
@@ -11,7 +11,7 @@
                           <a class="footer-logo" href="index.html">
                               <img src="https://www.khoahocdt.com/Logo.png" alt="Footer logo" width="150" height="150">
                           </a>
-                          <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, ducimus, atque. Praesentium suscipit provident explicabo dignissimos nostrum numquam deserunt earum accusantium et fugit.</p>
+                          <p class="about-text">Học không giới hạn cùng chúng tôi</p>
                           <div class="footer-social">
                               <h5 class="footer-social-title">Kết nối ngay với chúng tôi</h5>
                               <div class="socials">
@@ -37,9 +37,9 @@
               </div>
               <div class="col-md-4 col-sm-6 col-xs-12">
                   <div class="widget newsletter-widget">
-                      <h3 class="widget-title">Newsletter</h3>
+                      <h3 class="widget-title">Liên hệ</h3>
                       <div class="widget-inner">
-                          <p>Sign up for our mailling list to get latest updates videos and upcomming Movie</p>
+                          <p>Liên hệ ngay với chúng tôi</p>
                           <form id="subscriptionForm" class="subscription">
                               <input type="email" name="email" placeholder="Email Address" required>
                               <a  href="mailto:tieuduy97@gmail.com"><i class="fa fa-arrow-circle-right"></i></a>
