--- a/src/app/src/_modules/home/user-page/user-page.component.html
+++ b/src/app/src/_modules/home/user-page/user-page.component.html
@@ -177,7 +177,7 @@
 
                                         <p class="mb-0">Giá: {{myC.GiaTien | number:'.0'}}<sup>đ</sup>
                                         </p>
-                                        <a routerLink='/learn-continue/{{myC.id}}/{{myC.MangKH_id}}' class="text-center"
+                                        <a routerLink='/chitietkhoahoc/{{myC.id}}/{{myC.MangKH_id}}' class="text-center"
                                             class="btn btn-info btn-learn">Học tiếp</a>
                                     </div>
                                 </div>
