--- a/src/app/src/_modules/home/course-detail/course-detail.component.css
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.css
@@ -85,10 +85,15 @@ li{
     font-weight: bolder;
     font-size:32px;
 }
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:focus, .nav-tabs .nav-link:hover{
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active, .nav-tabs .nav-link:focus {
 border-width: 5px;
 border-color: #fff #fff #5cb85c;
 color: #555;
+}
+.nav-tabs .nav-link:hover{
+    border-width: 5px;
+    border-color: #fff #fff #87bae1;
+    color: #555;
 }
 .nav-tabs .nav-link{
     font-size: 1.4rem;
@@ -169,7 +174,7 @@ h3 span{
 .comment{
     display: flex;
     border-radius: 3px;
-    margin-bottom: 45px;
+    /* margin-bottom: 45px; */
     flex-wrap: wrap;
 }
 
@@ -205,6 +210,7 @@ h3 span{
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
+    cursor:default;
     padding: 10px 0 3px 0;
 }
 
@@ -256,10 +262,7 @@ h3 span{
     background-color:  #f3f3f3;
 }
 
-.comment.author-comment p{
-    background-color:  #e2f8ff;
-    order: 1;
-}
+
 
 .user-comment p:after{
     content: '';
@@ -272,18 +275,58 @@ h3 span{
     left: -8px;
     top: 18px;
 }
+/* rate */
+.comment p.rate-content{
+    line-height: 1.5;
+    padding: 18px 22px;
+    width: 100%;
+    position: relative;
+    word-wrap: break-word;
+    margin-left: 30px;
+}
 
-.author-comment p:after{
+.comment.user-comment p.rate-content{
+    background-color:  #f3f3f3;
+}
+
+
+
+.user-comment p.rate-content:after{
     content: '';
     position: absolute;
     width: 15px;
     height: 15px;
     border-radius: 50%;
     background-color: #ffffff;
-    border: 2px solid #e2f8ff;
-    right: -8px;
-    top: 18px;
+    border: 2px solid #f3f3f3;
+    left: -3px;
+    top: -4px;
 }
+.comment h5.rate-content{
+    line-height: 1.5;
+    padding: 18px 22px;
+    width: 100%;
+    position: relative;
+    word-wrap: break-word;
+    font-weight: 600;
+    font-size: 1.2rem
+}
+
+.comment.user-comment h5.rate-content{
+    background-color:  #ffffff;
+}
+
+.rate-delete{
+    position: relative;
+    width: 15px;
+    height: 15px;
+    top: -16px;
+    font-size: 1.2rem;
+    color: red!important;
+    
+}
+
+
 
 
 
@@ -291,8 +334,8 @@ h3 span{
 /* Comment form */
 
 .write-new{
-    margin: 80px auto 0;
-    width: 50%;
+    margin: 10px auto auto;
+width: 60%;
 }
 
 .write-new textarea{
@@ -332,21 +375,41 @@ h3 span{
 
 /* Popup video */
 .play-video {
-    height: 40px;
-width: 40px;
-display: inline-block;
-background-color: #00c851;
-text-align: center;
-line-height: 40px;
+    line-height: 40px;
 border-radius: 50%;
 box-shadow: 0 0 0 10px rgba(32, 235, 14, 0.3);
 font-size: 1.5rem;
 transition: all 0.3s ease;
 margin-right: 1rem;
+display: inline-block;
   }
+  .text-main{
+      font-size:1.4rem;
+      font-weight: 500;
+      cursor: default;
+  }
+  .text-main:hover{
+    font-size:1.6rem;
+    font-weight: 600;
+    color:blueviolet;
+    transition: 0.2s ease-in;
+
+  }
+  .play-video span{
+    font-size: 1.2rem;
+    margin: 10px 10px;
+  }
+  
   .play-video:hover {
     -webkit-box-shadow: 0 0 0 10px #00c851;
             box-shadow: 0 0 0 10px #00c851;
+            
+  }
+  .play-video:hover  span{
+    color: #00c851;
+    font-size: 1.4rem;
+    transition: 0.2s linear;
+            
   }
   .play-video i {
     color: #ffffff;
@@ -357,24 +420,35 @@ margin-right: 1rem;
     height: 40px;
 width: 40px;
 display: inline-block;
-background-color: #cfddd5;
+background-color: rgba(241, 125, 125,0.2);
 text-align: center;
 line-height: 40px;
 border-radius: 50%;
-box-shadow: 0 0 0 10px rgba(149, 153, 149, 0.3);
+box-shadow: 0 0 0 10px rgba(241, 14, 14, 0.3);
 font-size: 1.5rem;
 transition: all 0.3s ease;
 margin-right: 1rem;
-  }
-  .none-video:hover {
-    -webkit-box-shadow: 0 0 0 10px #646865;
-            box-shadow: 0 0 0 10px #646865;
   }
   .none-video i {
     color: #ffffff;
     margin-left: 5px;
     line-height: inherit;
   }
+  .none-video:hover {
+    -webkit-box-shadow: 0 0 0 10px green;
+            box-shadow: 0 0 0 10px green;
+            width: 50px;
+            height: 50px;
+            line-height: 50px;
+            transition: 0.2s linear;
+            
+  }
+  .none-video:hover i{
+    color: green!important;
+    margin-left: 5px;
+    line-height: inherit;
+  }
+  
 /* Rate Star */
 
 .rate {
@@ -398,18 +472,18 @@ margin-right: 1rem;
     content: '★ ';
 }
 .rate > input:checked ~ label {
-    color: #ffc700;    
+    color: yellow;    
 }
 .rate:not(:checked) > label:hover,
 .rate:not(:checked) > label:hover ~ label {
-    color: #deb217;  
+    color: yellow;  
 }
 .rate > input:checked + label:hover,
 .rate > input:checked + label:hover ~ label,
 .rate > input:checked ~ label:hover,
 .rate > input:checked ~ label:hover ~ label,
 .rate > label:hover ~ input:checked ~ label {
-    color: #c59b08;
+    color: yellow;
 }
 /* Responsive styles */
 
