--- a/src/app/src/_modules/admin/admin-khoahoc/admin-khoahoc.component.html
+++ b/src/app/src/_modules/admin/admin-khoahoc/admin-khoahoc.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-6 col-xs-12">
     <label>Chọn Thể Loại Khóa Học</label>
     <br>
     <form #frmUpdate='ngForm' (ngSubmit)='update(frmUpdate.value)'>
@@ -13,7 +13,7 @@
       </mat-form-field>
     </form>
   </div>
-  <div class="col-md-12">
+  <div class="col-md-6  col-xs-12">
     <label>Chọn Thể Loại Khóa Học</label>
     <br>
     <form #frmUpdate='ngForm'>
