--- a/src/app/src/_modules/admin/admin-template/admin-template.component.css
+++ b/src/app/src/_modules/admin/admin-template/admin-template.component.css
@@ -476,3 +476,8 @@
     padding: 0.25rem 1.5rem;
     color: #3a3b45;
   }
+  .turn-back{
+    color: #fff;
+    margin: 20px 20px;
+    font-size: 1.2rem;
+  }
