--- a/src/app/src/_modules/admin/admin-template/admin-template.component.html
+++ b/src/app/src/_modules/admin/admin-template/admin-template.component.html
@@ -85,7 +85,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Thư mục Bài Giảng:</h6>
             <a class="collapse-item" routerLink='bai-giang'>Danh sách bài giảng</a>
-            <a class="collapse-item" routerLink='bai-giang-add'>Thêm bài giảng</a>
+            <!-- <a class="collapse-item" routerLink='bai-giang-add'>Thêm bài giảng</a> -->
           </div>
         </div>
       </li>
@@ -169,8 +169,9 @@
         </div>
       </div>
     </li>
-
-
+    <li class="nav-item">
+        <a routerLink='/' class="turn-back"><i class="fa fa-arrow-left mr-2" aria-hidden="true"></i>Về trang chủ</a>
+      </li>
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
 
