--- a/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.html
+++ b/src/app/src/_modules/admin/admin-duyet/admin-duyet.component.html
@@ -1,4 +1,4 @@
-<table class="table table-bordered table-responsive-sm table-striped col-md-12" id="dataTable1" width="100%" cellspacing="0">
+<table class="table table-bordered table-responsive-sm table-striped col-md-11 mx-auto" id="dataTable1" width="100%" cellspacing="0">
   <thead class="table-primary">
     <tr>
       <th>ID Khóa Học</th>
@@ -27,7 +27,7 @@
 </table>
 <hr>
 <h4>Bài Giảng: </h4>
-<table class="table table-bordered table-responsive-sm table-striped col-md-12" id="dataTable1" width="100%" cellspacing="0">
+<table class="table table-bordered table-responsive-sm table-striped col-md-11 mx-auto" id="dataTable1" width="100%" cellspacing="0">
     <thead class="table-primary">
       <tr>
         <th>ID Bài Giảng</th>
@@ -43,8 +43,7 @@
         <td class="second">{{baiGiang.id}}</td>
         <td class="second">{{baiGiang.KhoaHoc_id}}</td>
         <td class="second">{{baiGiang.TenBaiGiang}}</td>
-        <td class="second">{{baiGiang.EmbededURL }}</td>      
-        
+        <td class="second"> <a class="play" href="{{baiGiang.EmbededURL}}">{{baiGiang.EmbededURL}}</a>
   
       </tr>
     </tbody>
