--- a/src/app/src/_modules/admin/admin-instructor/admin-instructor.component.html
+++ b/src/app/src/_modules/admin/admin-instructor/admin-instructor.component.html
@@ -55,7 +55,7 @@
             <td>{{user.SoLuongKhoaHoc}}</td>
             <td><button matButton  class="btn btn-primary mr-3 " (click)='modal(user.id)' data-toggle="modal" data-target="#updateModal">Xem Chi Tiết</button>
               <button  matButton (click)='getDataUpdate(user.id)' class="btn mr-3 btn-info">Cập nhật</button>
-              <button  matButton (click)='delUser(user.user_id)' class="btn btn-danger">Xóa</button></td>
+              <button  matButton (click)='delGiangVien(user.id)' class="btn btn-danger">Xóa</button></td>
       
           </tr>
         </tbody>
