--- a/src/app/src/_modules/admin/admin-mang-khoahoc/admin-mang-them/admin-mang-them.component.html
+++ b/src/app/src/_modules/admin/admin-mang-khoahoc/admin-mang-them/admin-mang-them.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-6 col-xs-12 mx-auto">
     <label>Chọn Thể Loại Khóa Học</label>
     <br>
     <form #frmSelect='ngForm'>
@@ -13,7 +13,7 @@
       </mat-form-field>
     </form>
   </div>
-  <div class="col-md-12">
+  <div class="col-md-6 col-xs-12 mx-auto">
     <label>Điền tên mảng khóa học</label>
     <br>
     <form #frmTheTheLoai='ngForm' (ngSubmit)='addTheLoai(frmTheTheLoai.value)'>
