--- a/src/app/src/_modules/admin/admin-user/admin-user.component.html
+++ b/src/app/src/_modules/admin/admin-user/admin-user.component.html
@@ -142,9 +142,9 @@
       <tr *ngFor='let user of danhSachUser'>
         <td>{{user.id}}</td>
         <td>{{user.name}}</td>
-        <td>{{user.email}}</td>
+        <td style="width:250px;">{{user.email}}</td>
         <td>{{user.href}}</td>
-        <td><button matButton class="btn btn-primary mr-2 " (click)='modal(user.id)' data-toggle="modal" data-target="#detailModel">Xem Chi Tiết</button>
+        <td style="width:308px;"><button matButton class="btn btn-primary mr-2 " (click)='modal(user.id)' data-toggle="modal" data-target="#detailModel">Xem Chi Tiết</button>
           <button matButton (click)='getDataUpdate(user.id)' class="btn mr-2 btn-info">Cập nhật</button>
           
           <button matButton (click)='delUser(user.id)' class="btn btn-danger">Xóa</button></td>
